# test-task-for-UpTrader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml  pylint.yml
menus/: __init__.py  admin.py  models.py  urls.py  views.py
menus/migrations/: 0001_initial.py  0002_menu_delete_menuitem.py  0003_menuitem_delete_menu.py
menus/templates/: menu.html  menu_item.html  menu_render.html
menus/templatetags/: menu_tags.py
project/: settings.py  urls.py  views.py
project/tamplates/: base.html
project/templates/: base.html  home.html
